--- a/app/src/main/res/layout/fr_recycler.xml
+++ b/app/src/main/res/layout/fr_recycler.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/refresher"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,4 +20,4 @@
 
     </FrameLayout>
 
-</androidx.core.widget.SwipeRefreshLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
