commit#19 NPE in Экран для генерации данных для заполнения БД (добавления редактирования БД) TODO сделать сохрание данных в БД

--- a/app/src/main/res/layout/fr_add_record.xml
+++ b/app/src/main/res/layout/fr_add_record.xml
@@ -21,7 +21,7 @@
         tools:text="@string/release_date" />
 
     <MultiAutoCompleteTextView
-        android:id="@+id/tvDicectorsName"
+        android:id="@+id/tvDirectorsName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/directors_name" />
