--- a/app/src/main/res/layout/list_item_film.xml
+++ b/app/src/main/res/layout/list_item_film.xml
@@ -19,6 +19,20 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp" />
 
+    <TextView
+        android:id="@+id/tv_directors_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"/>
+    <TextView
+        android:id="@+id/tv_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"/>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
