--- a/app/src/main/res/layout/edit_item.xml
+++ b/app/src/main/res/layout/edit_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhuinden.realmbookexample.paths.books.BooksAddBookView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.filmrepositoryapp.ui.FilmsAddFilmView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -19,7 +19,7 @@
         android:inputType="numberDecimal" />
 
     <EditText
-        android:id="@+id/author"
+        android:id="@+id/tvDirectorsName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
@@ -34,4 +34,4 @@
         android:hint="@string/rating"
         android:inputType="text" />
 
-</com.zhuinden.realmbookexample.paths.books.BooksAddBookView>
+</com.example.filmrepositoryapp.ui.FilmsAddFilmView>
