--- a/app/src/main/res/layout/list_item_film.xml
+++ b/app/src/main/res/layout/list_item_film.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"/>
     <TextView
-        android:id="@+id/tv_rating"
+        android:id="@+id/edRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
