--- a/app/src/main/res/layout/edit_item.xml
+++ b/app/src/main/res/layout/edit_item.xml
@@ -34,4 +34,13 @@
         android:hint="@string/rating"
         android:inputType="text" />
 
+    <EditText
+        android:id="@+id/thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:hint="@string/image"
+        android:inputType="text" />
+
+
 </com.example.filmrepositoryapp.ui.FilmsAddFilmView>
