--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/actionAddRecord"
+        android:id="@+id/search"
         android:title="@string/add_record"
         app:showAsAction="never" />
 
