itmber add in gradle app Another yet Multipie Errors corrected Many errors still needs to be corrected New branch called Realm_with_Toothpick

--- a/app/src/main/res/layout/fr_header_main.xml
+++ b/app/src/main/res/layout/fr_header_main.xml
@@ -3,7 +3,7 @@
 
     <data class="MainBinding">
 
-        <import type="com.example.alien.course04task02.ui.main.MainActivity"/>
+        <import type="com.example.filmrepositoryapp.ui.main.MainActivity"/>
 
     </data>
 
