--- a/app/src/main/res/layout/fr_header_search_by_name.xml
+++ b/app/src/main/res/layout/fr_header_search_by_name.xml
@@ -4,7 +4,7 @@
     <data class="SearchByNameBinding">
         <variable
             name="vm"
-            type="com.example.alien.course04task02.ui.search.SearchByNameViewModel"
+            type="com.example.filmrepositoryapp.ui.search.SearchByNameViewModel"
             />
     </data>
 
