//TODO закончить с остальными ошибками Another yet Multipie Errors corrected Many errors still needs to be corrected New branch called Realm_with_Toothpick

--- a/app/src/main/res/layout/fr_detail_fragment.xml
+++ b/app/src/main/res/layout/fr_detail_fragment.xml
@@ -3,7 +3,7 @@
 <data class="FilmDetailBinding">
     <variable
         name="vm"
-        type="com.example.alien.course04task02.ui.filmDetail.FilmDetailViewModel"/>
+        type="com.example.filmrepositoryapp.ui.filmDetail.FilmDetailViewModel"/>
 
 </data>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
