--- a/app/src/main/res/layout/fr_header_search_by_top.xml
+++ b/app/src/main/res/layout/fr_header_search_by_top.xml
@@ -4,7 +4,7 @@
     <data class="SearchByTopBinding">
         <variable
             name="vm"
-            type="com.example.alien.course04task02.ui.search.SearchByTopViewModel"
+            type="com.example.filmrepositoryapp.ui.search.SearchByTopViewModel"
             />
     </data>
 
