--- a/app/src/main/res/layout/fr_header_search_by_year.xml
+++ b/app/src/main/res/layout/fr_header_search_by_year.xml
@@ -4,7 +4,7 @@
     <data class="SearchByYearBinding">
         <variable
             name="vm"
-            type="com.example.alien.course04task02.ui.search.SearchByYearViewModel"
+            type="com.example.filmrepositoryapp.ui.search.SearchByYearViewModel"
             />
     </data>
 
