--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="text_size_normal">13sp</dimen>
     <dimen name="imge_book_detail">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="margin">8dp</dimen>
+    <dimen name="cardCornerRadius">4dp</dimen>
+
 </resources>
