--- a/app/src/main/res/layout/li_film_list.xml
+++ b/app/src/main/res/layout/li_film_list.xml
@@ -94,10 +94,13 @@
 
         <ImageView
             android:id="@+id/imageURL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="11dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginBottom="13dp"
+            android:layout_toEndOf="@id/tvDirector"
+
             tools:srcCompat="@tools:sample/avatars"
             tools:visibility="visible" />
     </RelativeLayout>
