Осталось доделать заполнение поля imageURL при редактировании фильма

--- a/app/src/main/res/layout/fr_detail_dialog_fragment.xml
+++ b/app/src/main/res/layout/fr_detail_dialog_fragment.xml
@@ -76,13 +76,20 @@
             android:id="@+id/etRate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvRate" />
+            android:layout_below="@+id/tvRate"  />
 
-
-
-
-
-
+         <TextView
+             android:id="@+id/tvImageURL"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@id/etRate"
+             android:text="Image URL" />
+        <EditText
+            android:id="@+id/etImageURL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvImageURL"
+            />
 
         </RelativeLayout>
     </ScrollView>
